refactor the helloworld gitaction v2

--- a/.github/workflows/hello-github-actions.yml
+++ b/.github/workflows/hello-github-actions.yml
@@ -7,9 +7,11 @@
        runs-on: ubuntu-latest   		# Set the type of machine to run on
        steps:
          - uses: actions/checkout@v2   # Checks out a copy of your repository on the ubuntu-latest machine
+
          - name: Say Hello World
-         - run: echo 'Hello World'  	# the action
+           run: echo 'Hello World'  	# the action
+           
          - name: View a file
-         - run: |
+           run: |
               echo 'Viewing the file: '
               cat requirements.txt 
